--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "dependencies": {
     "express": "*",
+    "mongodb": "^2.1.16",
+    "mongoose": "^4.4.12",
     "morgan": "^1.7.0"
   },
   "devDependencies": {
