--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "author": "Julian Schmitt",
   "private": true,
   "dependencies": {
+    "cookie-parser": "^1.4.1",
     "express": "*",
+    "express-session": "^1.13.0",
     "mongodb": "^2.1.16",
     "mongoose": "^4.4.12",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^2.0.0",
