--- a/home/bower.json
+++ b/home/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "^1.5.3",
     "angular-route": "^1.5.3",
-    "jquery": "^2.2.3"
+    "jquery": "^2.2.3",
+    "angular-translate": "^2.11.0"
   }
 }
