--- a/home/bower.json
+++ b/home/bower.json
@@ -19,6 +19,7 @@
     "angular": "^1.5.3",
     "angular-route": "^1.5.3",
     "jquery": "^2.2.3",
-    "angular-translate": "^2.11.0"
+    "angular-translate": "^2.11.0",
+    "Materialize": "materialize#^0.97.6"
   }
 }
