--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cookie-parser": "^1.4.1",
     "express": "*",
     "express-session": "^1.13.0",
+    "jsonwebtoken": "^5.7.0",
     "mongodb": "^2.1.16",
     "mongoose": "^4.4.12",
     "morgan": "^1.7.0",
