added: modal to add new translations, wip: needs author info in metadata metadata can be uncommented when userCrud is implemented

--- a/home/bower.json
+++ b/home/bower.json
@@ -20,6 +20,8 @@
     "angular-route": "^1.5.3",
     "jquery": "^2.2.3",
     "angular-translate": "^2.11.0",
+    "angular-translate-storage-cookie": "^2.11.0",
+    "angular-translate-storage-local": "^2.11.0",
     "Materialize": "materialize#^0.97.6"
   }
 }
