--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Julian Schmitt",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.15.1",
     "composable-middleware": "^0.3.0",
     "cookie-parser": "^1.4.1",
     "crypto": "0.0.3",
