--- a/home/bower.json
+++ b/home/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "^1.5.3",
     "angular-route": "^1.5.3",
+    "flag-icon-css": "^2.2.0",
     "jquery": "^2.2.3",
     "angular-translate": "^2.11.0",
     "angular-translate-storage-cookie": "^2.11.0",
