--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "express": "*",
     "express-session": "^1.13.0",
     "jsonwebtoken": "^5.7.0",
+    "letsencrypt-express": "^1.1.5",
     "mongodb": "^2.1.16",
     "mongoose": "^4.4.12",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0"
+    "passport-local-mongoose": "^4.0.0",
+    "spdy": "^3.3.3"
   },
   "devDependencies": {
     "chai": "^2.0.0",
